--- a/frontend/admin/timkerja.html
+++ b/frontend/admin/timkerja.html
@@ -270,6 +270,8 @@
 
           <div class="modal-body">
             <form id="formTambah">
+              <input type="hidden" name="institusi_id" value="1" />
+
               <div class="mb-3">
                 <label class="form-label">Jabatan</label>
                 <input name="jabatan" class="form-control" required />
@@ -307,7 +309,6 @@
                 <label class="form-label">Jabatan</label>
                 <input id="edit_jabatan" name="jabatan" class="form-control" />
               </div>
-
             </form>
           </div>
 
