--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -2,12 +2,21 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
+    <!-- Favicons -->
+    <link
+      rel="icon"
+      href="/pelatihanmargono/backend/uploads/foto/LogoWeb.png"
+      type="image/png"
+      sizes="512x512"
+    />
+
     <title>Admin - Kelola User Admin</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../assets/css/main.css" />
 
     <style>
       body {
@@ -134,6 +143,9 @@
                     >Histori Akreditasi</a
                   >
                 </li>
+                <li>
+                  <a class="dropdown-item" href="sertifikat.html">Sertifikat</a>
+                </li>
               </ul>
             </li>
 
@@ -165,17 +177,17 @@
             </li>
 
             <li class="nav-item dropdown">
-              <i class="bi bi-person-fill"></i>
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
                 data-bs-toggle="dropdown"
                 >Admin
               </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
+              <ul class="dropdown-menu dropdown-menu-dark" id="menuSuperAdmin">
                 <li>
                   <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
+                <!-- item superadmin akan ditambahkan lewat JS -->
               </ul>
             </li>
 
@@ -224,8 +236,8 @@
         </div>
 
         <div class="table-responsive mt-3 ms-3 me-3" style="max-height: 450px">
-          <table class="table table-bordered">
-            <thead class="table-dark">
+          <table class="table table-bordered table-hover table-sm">
+            <thead class="thead-telur-asin">
               <tr>
                 <th>No</th>
                 <th>Nama Lengkap</th>
@@ -350,7 +362,6 @@
         } catch (err) {
           console.error("Gagal logout:", err);
         } finally {
-          localStorage.clear();
           window.location.href = "loginadmin.html";
         }
       }
@@ -396,6 +407,29 @@
           return `${tanggal}, ${jam} WIB`;
         }
 
+        // Render Button Aksi Aktif dan Nonaktif
+        function renderStatusButton(item) {
+          if (!currentUser || Number(currentUser.level_user) !== 1) {
+            return "-";
+          }
+
+          if (item.status_user == 1) {
+            return `
+            <button class="btn btn-danger btn-sm"
+                onclick="toggleStatus(${item.id_user}, ${item.status_user}, '${item.nama_lengkap}')">
+                Nonaktifkan
+            </button>
+            `;
+          }
+
+          return `
+            <button class="btn btn-success btn-sm"
+            onclick="toggleStatus(${item.id_user}, ${item.status_user})">
+            Aktifkan
+            </button>
+        `;
+        }
+
         // ===============================
         // CEK LOGIN ADMIN
         // ===============================
@@ -404,15 +438,28 @@
 
         currentUser = meData.admin;
 
-        console.log("RESPONSE /me:", meData);
-        console.log("CURRENT USER:", currentUser);
+        // Menu khusus superadmin
+        // const menuSuperAdmin = document.getElementById("menuSuperAdmin");
+
+        // if (currentUser?.level_user === 1) {
+        //   menuSuperAdmin.innerHTML = `
+        //     <li>
+        //     <a class="dropdown-item" href="admin.html">Kelola Admin</a>
+        //     </li>
+        // `;
+        // } else {
+        //   menuSuperAdmin.innerHTML = ""; // kosongkan jika bukan super admin
+        // }
+
+        // console.log("RESPONSE /me:", meData);
+        // console.log("CURRENT USER:", currentUser);
 
         if (currentUser?.level_user === 1) {
           document.getElementById("btnTambahContainer").innerHTML = `
-      <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalTambahAdmin">
-        + Tambah Admin
-      </button>
-    `;
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalTambahAdmin">
+            + Tambah Admin
+        </button>
+        `;
         }
 
         // ===============================
@@ -474,18 +521,7 @@
             </span>
           </td>
           <td>${formatTanggal(item.last_login)}</td>
-          <td>
-            ${
-              currentUser && Number(currentUser.level_user) === 1
-                ? `
-                <button class="btn btn-danger btn-sm"
-                  onclick="toggleStatus(${item.id_user}, ${item.status_user})">
-                  NonAktifkan
-                </button>
-              `
-                : "-"
-            }
-          </td>
+          <td>${renderStatusButton(item)}</td>
         </tr>
       `;
           });
@@ -547,28 +583,39 @@
             }
           });
 
-        window.toggleStatus = async (id, status) => {
-          await fetch(`${API}/${id}/status`, {
+        window.toggleStatus = async (id, status, nama_lengkap) => {
+          const action = status == 1 ? "menonaktifkan" : "mengaktifkan";
+
+          const confirmAction = confirm(
+            `Apakah Anda yakin ingin ${action} ${nama_lengkap}?`,
+          );
+
+          if (!confirmAction) return;
+
+          const res = await fetch(`${API}/${id}/status`, {
             method: "PUT",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ status_user: status == 1 ? 0 : 1 }),
             credentials: "include",
           });
-          loadAdmin();
-        };
 
-        window.hapusAdmin = async (id) => {
-          if (!confirm("Hapus admin ini?")) return;
-          await fetch(`${API}/${id}`, {
-            method: "DELETE",
-            credentials: "include",
-          });
+          const data = await res.json();
+
+          if (!res.ok) {
+            alert(data.message || "Gagal mengubah status");
+            return;
+          }
+
+          alert(data.message);
           loadAdmin();
         };
 
         loadAdmin();
       });
     </script>
+
+    <script src="admin_guard.js"></script>
+    <script src="admin_nav_role.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
