--- a/frontend/admin/gallery.html
+++ b/frontend/admin/gallery.html
@@ -18,21 +18,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/css/main.css" />
-
-    <style>
-      body {
-        background: #f5f6fa;
-      }
-      .card {
-        border-radius: 10px;
-      }
-      .gallery-thumb {
-        width: 70px;
-        height: 70px;
-        object-fit: cover;
-        border-radius: 6px;
-      }
-    </style>
   </head>
 
   <body>
@@ -147,9 +132,12 @@
                   <a class="dropdown-item" href="timkerja.html">Tim Kerja</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="strukturorganisasi.html"
-                    >Struktur Organisasi</a
+                  <a class="dropdown-item" href="historiakreditasi.html"
+                    >Histori Akreditasi</a
                   >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="sertifikat.html">Sertifikat</a>
                 </li>
               </ul>
             </li>
@@ -182,17 +170,17 @@
             </li>
 
             <li class="nav-item dropdown">
-              <i class="bi bi-person-fill"></i>
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
                 data-bs-toggle="dropdown"
                 >Admin
               </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
+              <ul class="dropdown-menu dropdown-menu-dark" id="menuSuperAdmin">
                 <li>
                   <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
+                <!-- item superadmin akan ditambahkan lewat JS -->
               </ul>
             </li>
 
@@ -219,7 +207,6 @@
         </div>
       </div>
     </nav>
-
     <!-- END NAVBAR -->
 
     <div class="container py-4">
@@ -792,7 +779,8 @@
         loadGallery();
       });
     </script>
-    <script src="http://localhost:5000/static/admin_check.js"></script>
+    <script src="admin_guard.js"></script>
+    <script src="admin_nav_role.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
