--- a/frontend/admin/kalender.html
+++ b/frontend/admin/kalender.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
@@ -18,15 +18,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/css/main.css" />
-
-    <style>
-      body {
-        background: #f5f6fa;
-      }
-      .card {
-        border-radius: 10px;
-      }
-    </style>
   </head>
 
   <body>
@@ -145,6 +136,9 @@
                     >Histori Akreditasi</a
                   >
                 </li>
+                <li>
+                  <a class="dropdown-item" href="sertifikat.html">Sertifikat</a>
+                </li>
               </ul>
             </li>
 
@@ -168,23 +162,25 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="strukturorganisasi.html">Struktur Organisasi</a>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
                 </li>
               </ul>
             </li>
 
             <li class="nav-item dropdown">
-              <i class="bi bi-person-fill"></i>
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
                 data-bs-toggle="dropdown"
                 >Admin
               </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
+              <ul class="dropdown-menu dropdown-menu-dark" id="menuSuperAdmin">
                 <li>
                   <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
+                <!-- item superadmin akan ditambahkan lewat JS -->
               </ul>
             </li>
 
@@ -419,7 +415,7 @@
           previewFileUrl = `http://localhost:5000/uploads/kalender/${data.file_kalender}`;
 
           new bootstrap.Modal(
-            document.getElementById("modalEditKalender")
+            document.getElementById("modalEditKalender"),
           ).show();
         };
 
@@ -444,7 +440,7 @@
           alert(data.message);
 
           bootstrap.Modal.getInstance(
-            document.getElementById("modalEditKalender")
+            document.getElementById("modalEditKalender"),
           ).hide();
 
           formEdit.reset();
@@ -491,7 +487,7 @@
           }
 
           new bootstrap.Modal(
-            document.getElementById("modalPreviewKalender")
+            document.getElementById("modalPreviewKalender"),
           ).show();
         };
 
@@ -534,7 +530,7 @@
           }
 
           new bootstrap.Modal(
-            document.getElementById("modalPreviewKalender")
+            document.getElementById("modalPreviewKalender"),
           ).show();
         };
 
@@ -557,7 +553,8 @@
       });
     </script>
 
-    <script src="http://localhost:5000/static/admin_check.js"></script>
+    <script src="admin_guard.js"></script>
+    <script src="admin_nav_role.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
