--- a/frontend/admin/pelatihan.html
+++ b/frontend/admin/pelatihan.html
@@ -18,15 +18,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/css/main.css" />
-
-    <style>
-      body {
-        background: #f5f6fa;
-      }
-      .card {
-        border-radius: 10px;
-      }
-    </style>
   </head>
   <body>
     <!-- ================= NAVBAR ================= -->
@@ -140,9 +131,12 @@
                   <a class="dropdown-item" href="timkerja.html">Tim Kerja</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="strukturorganisasi.html"
-                    >Struktur Organisasi</a
+                  <a class="dropdown-item" href="historiakreditasi.html"
+                    >Histori Akreditasi</a
                   >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="sertifikat.html">Sertifikat</a>
                 </li>
               </ul>
             </li>
@@ -167,23 +161,25 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="strukturorganisasi.html">Struktur Organisasi</a>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
                 </li>
               </ul>
             </li>
 
             <li class="nav-item dropdown">
-              <i class="bi bi-person-fill"></i>
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
                 data-bs-toggle="dropdown"
                 >Admin
               </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
+              <ul class="dropdown-menu dropdown-menu-dark" id="menuSuperAdmin">
                 <li>
                   <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
+                <!-- item superadmin akan ditambahkan lewat JS -->
               </ul>
             </li>
 
@@ -798,8 +794,6 @@
             const res = await fetch(API);
             const json = await res.json();
 
-            console.log("DATA API:", json);
-
             allData = Array.isArray(json) ? json : [];
             filteredData = [...allData];
             currentPage = 1;
@@ -1128,7 +1122,10 @@
           "/pelatihanmargono/frontend/admin/loginadmin.html";
       }
     </script>
-    <script src="http://localhost:5000/static/admin_check.js"></script>
+
+    <script src="admin_guard.js"></script>
+    <script src="admin_nav_role.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
