--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
@@ -18,15 +18,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/css/main.css" />
-
-    <style>
-      body {
-        background: #f5f6fa;
-      }
-      .card {
-        border-radius: 10px;
-      }
-    </style>
   </head>
 
   <body>
@@ -145,6 +136,9 @@
                     >Histori Akreditasi</a
                   >
                 </li>
+                <li>
+                  <a class="dropdown-item" href="sertifikat.html">Sertifikat</a>
+                </li>
               </ul>
             </li>
 
@@ -168,23 +162,25 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="strukturorganisasi.html">Struktur Organisasi</a>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
                 </li>
               </ul>
             </li>
 
             <li class="nav-item dropdown">
-              <i class="bi bi-person-fill"></i>
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
                 data-bs-toggle="dropdown"
                 >Admin
               </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
+              <ul class="dropdown-menu dropdown-menu-dark" id="menuSuperAdmin">
                 <li>
                   <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
+                <!-- item superadmin akan ditambahkan lewat JS -->
               </ul>
             </li>
 
@@ -490,7 +486,7 @@
           const sortedData = [...filteredData].sort(
             (a, b) =>
               (statusPriority[a.status_bayar] || 99) -
-              (statusPriority[b.status_bayar] || 99)
+              (statusPriority[b.status_bayar] || 99),
           );
 
           const start = (currentPage - 1) * rowsPerPage;
@@ -502,8 +498,8 @@
               item.status_bayar === "PENDING"
                 ? "warning"
                 : item.status_bayar === "VALID"
-                ? "success"
-                : "danger";
+                  ? "success"
+                  : "danger";
 
             tableBody.innerHTML += `
               <tr>
@@ -511,7 +507,7 @@
                 <td>${item.nama_peserta}</td>
                 <td>${item.nama_pelatihan}</td>
                 <td>Rp ${Number(item.harga_pelatihan).toLocaleString(
-                  "id-ID"
+                  "id-ID",
                 )}</td>
 
                 <td>${item.no_wa}</td>
@@ -538,8 +534,8 @@
                     item.status_bayar === "PENDING"
                       ? "warning"
                       : item.status_bayar === "VALID"
-                      ? "success"
-                      : "danger"
+                        ? "success"
+                        : "danger"
                   }">
                     ${item.status_bayar}
                   </span>
@@ -572,7 +568,7 @@
 
           infoData.innerText = `Showing ${start + 1} to ${Math.min(
             end,
-            filteredData.length
+            filteredData.length,
           )} of ${filteredData.length} entries`;
 
           prevBtn.disabled = currentPage === 1;
@@ -690,7 +686,8 @@
         loadPembayaran();
       });
     </script>
-    <script src="http://localhost:5000/static/admin_check.js"></script>
+    <script src="admin_guard.js"></script>
+    <script src="admin_nav_role.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
