--- a/frontend/admin/strukturorganisasi.html
+++ b/frontend/admin/strukturorganisasi.html
@@ -16,75 +16,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/css/main.css" />
-
-    <style>
-      body {
-        background: #f5f6fa;
-      }
-
-      /* ================= ORGANIZATION TREE ================= */
-      .org-wrapper {
-        overflow-x: auto;
-        padding: 30px;
-      }
-
-      .org-level {
-        display: flex;
-        justify-content: center;
-        gap: 40px;
-        margin-bottom: 70px;
-        position: relative;
-      }
-
-      .org-card {
-        width: 220px;
-        background: #fff;
-        border-radius: 14px;
-        text-align: center;
-        padding: 15px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
-        position: relative;
-      }
-
-      .org-card img {
-        width: 80px;
-        height: 80px;
-        object-fit: cover;
-        border-radius: 50%;
-        border: 3px solid #5cb85c;
-        margin-bottom: 10px;
-      }
-
-      .org-name {
-        font-weight: bold;
-        font-size: 15px;
-      }
-
-      .org-jabatan {
-        font-size: 13px;
-        color: #666;
-      }
-
-      /* garis komando */
-      .line-command {
-        position: absolute;
-        width: 2px;
-        height: 40px;
-        background: #333;
-        top: -40px;
-        left: 50%;
-        transform: translateX(-50%);
-      }
-
-      /* garis koordinasi */
-      .line-coordinate {
-        position: absolute;
-        top: -25px;
-        left: 0;
-        width: 100%;
-        border-top: 2px dashed #999;
-      }
-    </style>
   </head>
 
   <body>
@@ -199,9 +130,12 @@
                   <a class="dropdown-item" href="timkerja.html">Tim Kerja</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="strukturorganisasi.html"
-                    >Struktur Organisasi</a
+                  <a class="dropdown-item" href="historiakreditasi.html"
+                    >Histori Akreditasi</a
                   >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="sertifikat.html">Sertifikat</a>
                 </li>
               </ul>
             </li>
@@ -234,17 +168,17 @@
             </li>
 
             <li class="nav-item dropdown">
-              <i class="bi bi-person-fill"></i>
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
                 data-bs-toggle="dropdown"
                 >Admin
               </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
+              <ul class="dropdown-menu dropdown-menu-dark" id="menuSuperAdmin">
                 <li>
                   <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
+                <!-- item superadmin akan ditambahkan lewat JS -->
               </ul>
             </li>
 
@@ -458,7 +392,8 @@
       });
     </script>
 
-    <script src="http://localhost:5000/static/admin_check.js"></script>
+    <script src="admin_guard.js"></script>
+    <script src="admin_nav_role.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
